@@ -29,7 +29,7 @@ from gettext import gettext as _
 from softwarecenter.enums import *
 from softwarecenter.distro import get_distro
 
-from appview import AppView, AppStore
+from appview import AppView, AppStore, AppViewFilter
 
 from softwarepane import SoftwarePane, wait_for_apt_cache_ready
 
@@ -75,8 +75,11 @@ class ChannelPane(SoftwarePane):
         """refresh the applist after search changes and update the 
            navigation bar
         """
-#        channel_query = xapian.Query("XOL" + self.channel_name)
-        channel_query = self.channel.get_xapian_query()
+        print "in refresh apps:"
+        print self.channel
+        if not self.channel:
+            return
+        channel_query = self.channel.get_channel_query()
         if self.search_terms:
             query = self.db.get_query_list_from_search_entry(self.search_terms,
                                                              channel_query)
@@ -85,17 +88,10 @@ class ChannelPane(SoftwarePane):
                                             "search")
         else:
             self.navigation_bar.remove_all(keep_first_part=False)
-            self.navigation_bar.add_with_id(self.channel_display_name,
+            self.navigation_bar.add_with_id(self.channel.get_channel_display_name(),
                                         self.on_navigation_list,
                                         "list")
             query = xapian.Query(channel_query)
-        # FIXME: abstract this test away somehow
-        if self.channel_name == self.distro.get_distro_channel_name():
-            # show only apps for the main channel, otherwise the list
-            # size explodes (consistency FTW)
-            query = xapian.Query(xapian.Query.OP_AND, 
-                                 query,
-                                 xapian.Query("ATapplication"))
 
         logging.debug("channelpane query: %s" % query)
         # *ugh* deactivate the old model because otherwise it keeps
@@ -122,7 +118,7 @@ class ChannelPane(SoftwarePane):
         """
         self.channel = channel
         if self.channel.filter_required:
-            self.apps_filter = AppViewFilter(db, cache)
+            self.apps_filter = AppViewFilter(self.db, self.cache)
             self.apps_filter.set_only_packages_without_applications(True)
         else:
             self.apps_filter = None
@@ -191,19 +187,6 @@ class ChannelPane(SoftwarePane):
     def is_category_view_showing(self):
         # there is no category view in the channel pane
         return False
-
-    def set_channel_name(self, channel_name):
-        """
-        set the value for the channel name for use in the Xapian query
-        """
-        self.channel_name = channel_name
-    
-    def set_channel_display_name(self, channel_display_name):
-        """
-        set the value for the string to be used when displaying the
-        channel in the UI
-        """
-        self.channel_display_name = channel_display_name
 
 if __name__ == "__main__":
     #logging.basicConfig(level=logging.DEBUG)
