@@ -151,7 +151,7 @@ class ViewSwitcherList(gtk.TreeStore):
     ANIMATION_PATH = "/usr/share/icons/hicolor/24x24/status/softwarecenter-progress.png"
 
     def __init__(self, datadir, db, icons):
-        gtk.TreeStore.__init__(self, AnimatedImage, str, int, str)
+        gtk.TreeStore.__init__(self, AnimatedImage, str, int, gobject.TYPE_PYOBJECT)
         self.icons = icons
         self.datadir = datadir
         self.backend = get_install_backend()
@@ -162,20 +162,22 @@ class ViewSwitcherList(gtk.TreeStore):
         self._pending = 0
         # setup the normal stuff
         available_icon = self._get_icon("softwarecenter")
-        available_iter = self.append(None, [available_icon, _("Get Software"), self.ACTION_ITEM_AVAILABLE, ""])
+        available_iter = self.append(None, [available_icon, _("Get Software"), self.ACTION_ITEM_AVAILABLE, None])
         
-        # get list of channel sources of form:
-        #     [icon, label, action, channel_name]
-        channel_sources = self._get_channel_sources()
+        # get list of software channels
+        channels = self._get_channels()
         
-        # iterate the channel sources list and add as subnodes of the available node
-        for channel in channel_sources:
-            self.append(available_iter, channel)
+        # iterate the channels and add as subnodes of the available node
+        for channel in channels:
+            self.append(available_iter, [channel.get_channel_icon(),
+                                         channel.get_channel_display_name(),
+                                         self.ACTION_ITEM_CHANNEL,
+                                         channel])
         
         icon = AnimatedImage(self.icons.load_icon("computer", self.ICON_SIZE, 0))
-        installed_iter = self.append(None, [icon, _("Installed Software"), self.ACTION_ITEM_INSTALLED, ""])
+        installed_iter = self.append(None, [icon, _("Installed Software"), self.ACTION_ITEM_INSTALLED, None])
         icon = AnimatedImage(None)
-        self.append(None, [icon, "<span size='1'> </span>", self.ACTION_ITEM_SEPARATOR_1, ""])
+        self.append(None, [icon, "<span size='1'> </span>", self.ACTION_ITEM_SEPARATOR_1, None])
 
     def on_transactions_changed(self, backend, total_transactions):
         logging.debug("on_transactions_changed '%s'" % total_transactions)
@@ -189,7 +191,7 @@ class ViewSwitcherList(gtk.TreeStore):
                 icon = AnimatedImage(self.ANIMATION_PATH)
                 icon.start()
                 self.append(None, [icon, _("In Progress (%i)") % pending, 
-                             self.ACTION_ITEM_PENDING, ""])
+                             self.ACTION_ITEM_PENDING, None])
         else:
             for (i, row) in enumerate(self):
                 if row[self.COL_ACTION] == self.ACTION_ITEM_PENDING:
@@ -204,79 +206,94 @@ class ViewSwitcherList(gtk.TreeStore):
                                                       self.ICON_SIZE, 0))
         return icon
         
-    def _get_channel_sources(self):
+    def _get_channels(self):
         """
-        return a list of channel sources, with each entry in the list
-        in the form:
-               [icon, label, action, channel_name]
-        """        
+        return a list of SoftwareChannel objects in display order
+        """
         channels = []
-        for channel_iter in self.db.xapiandb.allterms("XOL"):
-            if len(channel_iter.term) == 3:
-                continue
-            channel_name = channel_iter.term[3:]
-            
-            # get origin information for this channel
-            m = self.db.xapiandb.postlist_begin(channel_iter.term)
-            doc = self.db.xapiandb.get_document(m.get_docid())
-            for term_iter in doc.termlist():
-                if term_iter.term.startswith("XOO") and len(term_iter.term) > 3: 
-                    channel_origin = term_iter.term[3:]
-                    break
-            logging.debug("channel_name: %s" % channel_name)
-            logging.debug("channel_origin: %s" % channel_origin)
-            channels.append((channel_name, channel_origin))
-            
-        # find items in the partner repo
-        for component_iter in self.db.xapiandb.allterms("XOC"):
-            if len(component_iter.term) == 3:
-                continue
-            component_name = component_iter.term[3:]
-            print "component_name: %s" % component_name
-            
-        channel_sources = []
-        for (channel_name, channel_origin) in self._order_channels(channels):
-            channel_sources.append(
-                [self._get_icon_for_channel(channel_name, channel_origin), 
-                 self._get_display_name_for_channel(channel_name),
-                 self.ACTION_ITEM_CHANNEL,
-                 channel_name])     
-                
-        return channel_sources
+        channel = SoftwareChannel(self.icons,
+                                  self.distro.get_distro_channel_name(),
+                                  None,
+                                  None,
+                                  filter_required=True)
+        channels.append(channel)
         
-    def _order_channels(self, channels):
-        """
-        given a list of channels, order them according to:
-            Distribution, Partners, PPAs alphabetically, Other channels alphabetically,
-            Unknown channel last
-        """
-        dist_channel = []
-        partner_channel = []
-        ppa_channels = []
-        other_channels = []
-        unknown_channel = []
-        ordered_channels = []
+        return channels
         
-        for (channel_name, channel_origin) in channels:
-            if not channel_name:
-                unknown_channel.append((channel_name, channel_origin))
-            elif channel_name == self.distro.get_distro_channel_name():
-                dist_channel.append((channel_name, channel_origin))
-            elif channel_origin and channel_origin.startswith("LP-PPA"):
-                ppa_channels.append((channel_name, channel_origin))
-            # TODO: detect generic repository source (e.g., Google, Inc.)
-            # TODO: detect partner channel
-            else:
-                other_channels.append((channel_name, channel_origin))
         
-        # set them in order
-        ordered_channels.extend(dist_channel)
-        ordered_channels.extend(partner_channel)
-        ordered_channels.extend(ppa_channels)
-        ordered_channels.extend(other_channels)
-        ordered_channels.extend(unknown_channel)
-        
-        return ordered_channels
+#    def _get_channel_sources(self):
+#        """
+#        return a list of channel sources, with each entry in the list
+#        in the form:
+#               [icon, label, action, channel_name]
+#        """        
+#        channels = []
+#        for channel_iter in self.db.xapiandb.allterms("XOL"):
+#            if len(channel_iter.term) == 3:
+#                continue
+#            channel_name = channel_iter.term[3:]
+#            
+#            # get origin information for this channel
+#            m = self.db.xapiandb.postlist_begin(channel_iter.term)
+#            doc = self.db.xapiandb.get_document(m.get_docid())
+#            for term_iter in doc.termlist():
+#                if term_iter.term.startswith("XOO") and len(term_iter.term) > 3: 
+#                    channel_origin = term_iter.term[3:]
+#                    break
+#            logging.debug("channel_name: %s" % channel_name)
+#            logging.debug("channel_origin: %s" % channel_origin)
+#            channels.append((channel_name, channel_origin))
+#            
+#        # find items in the partner repo
+#        for component_iter in self.db.xapiandb.allterms("XOC"):
+#            if len(component_iter.term) == 3:
+#                continue
+#            component_name = component_iter.term[3:]
+#            print "component_name: %s" % component_name
+#            
+#        channel_sources = []
+#        for (channel_name, channel_origin) in self._order_channels(channels):
+#            channel_sources.append(
+#                [self._get_icon_for_channel(channel_name, channel_origin), 
+#                 self._get_display_name_for_channel(channel_name),
+#                 self.ACTION_ITEM_CHANNEL,
+#                 channel_name])     
+#                
+#        return channel_sources
+#        
+#    def _order_channels(self, channels):
+#        """
+#        given a list of channels, order them according to:
+#            Distribution, Partners, PPAs alphabetically, Other channels alphabetically,
+#            Unknown channel last
+#        """
+#        dist_channel = []
+#        partner_channel = []
+#        ppa_channels = []
+#        other_channels = []
+#        unknown_channel = []
+#        ordered_channels = []
+#        
+#        for (channel_name, channel_origin) in channels:
+#            if not channel_name:
+#                unknown_channel.append((channel_name, channel_origin))
+#            elif channel_name == self.distro.get_distro_channel_name():
+#                dist_channel.append((channel_name, channel_origin))
+#            elif channel_origin and channel_origin.startswith("LP-PPA"):
+#                ppa_channels.append((channel_name, channel_origin))
+#            # TODO: detect generic repository source (e.g., Google, Inc.)
+#            # TODO: detect partner channel
+#            else:
+#                other_channels.append((channel_name, channel_origin))
+#        
+#        # set them in order
+#        ordered_channels.extend(dist_channel)
+#        ordered_channels.extend(partner_channel)
+#        ordered_channels.extend(ppa_channels)
+#        ordered_channels.extend(other_channels)
+#        ordered_channels.extend(unknown_channel)
+#        
+#        return ordered_channels
 
 if __name__ == "__main__":
     logging.basicConfig(level=logging.DEBUG)
