@@ -21,7 +21,8 @@ software-center (1.1.16) UNRELEASED; urgency=low
   * softwarecenter/backend/channel.py:
     - add to reimplement channels as instances of a new SoftwareChannel
       class, supports fixing the issues below
-  * softwarecenter/view/viewswitcher.py,
+  * softwarecenter/app.py,
+    softwarecenter/view/viewswitcher.py,
     softwarecenter/view/channelpane.py:
     - enable Canonical partner channel repository view (LP: #530401)
     - fix crash when searching while in "Provided by Ubuntu"
@@ -33,7 +34,7 @@ software-center (1.1.16) UNRELEASED; urgency=low
     - fix navigation button text for the "Provided by Ubuntu"
       view (LP: #530398)
 
- -- Gary Lasker <gary.lasker@canonical.com>  Tue, 02 Mar 2010 16:22:11 -0500
+ -- Gary Lasker <gary.lasker@canonical.com>  Tue, 02 Mar 2010 18:05:58 -0500
 
 software-center (1.1.15) lucid; urgency=low
 
